<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/events_background">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/events_background"
        android:fitsSystemWindows="true"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/events_title"
            app:titleCentered="true"
            app:titleTextColor="@color/black"
            app:navigationIcon="@drawable/ic_menu"
            app:menu="@menu/menu_event_list" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@color/event_detail_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <HorizontalScrollView
            android:id="@+id/filterScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingBottom="@dimen/_6sdp">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="true"
                app:selectionRequired="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipAll"
                    style="@style/Widget.App.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_all"
                    android:checked="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipToday"
                    style="@style/Widget.App.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_today" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipUpcoming"
                    style="@style/Widget.App.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_upcoming" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipPast"
                    style="@style/Widget.App.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_past" />

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewEvents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_80sdp"
            tools:listitem="@layout/item_event" />

        <LinearLayout
            android:id="@+id/emptyView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone">

            <ImageView
                android:id="@+id/emptyIcon"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:src="@drawable/ic_empty_events"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/emptyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/no_events_found"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/events_description_text" />

        </LinearLayout>

    </FrameLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/events_primary" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/_16sdp"
        android:src="@drawable/ic_add"
        android:contentDescription="@string/add_event"
        app:backgroundTint="@color/events_fab_bg"
        app:tint="@color/events_fab_icon" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>